[theme] - fixed nav overflow

--- a/httpdocs/callam-williams/themes/callam-williams/assets/src/sass/layout/_header.scss
+++ b/httpdocs/callam-williams/themes/callam-williams/assets/src/sass/layout/_header.scss
@@ -26,6 +26,11 @@
 	&__navigation {
 		display: flex;
 
+		@include mq($small) {
+			justify-content: space-around;
+			width: 100%;
+		}
+
 		span {
 			margin: 5px 10px 0;
 			padding: 0 5px;
